src/theme/Footer/styles.module.css
.footer {
  background: var(--ifm-background-deemphasized-color);
  font-family: var(--ifm-heading-font-family);
  padding: 3rem 2rem 1.5rem;
}

.column {
  display: flex;
  gap: 1rem;
  flex-direction: column;
}

.links {
  display: flex;
  font-weight: var(--ifm-heading-font-weight);
  justify-content: space-between;
  margin: auto;
  max-width: 1200px;
  flex-direction: column;
}

.heading {
  font-size: var(--ifm-h3-font-size);
}

.links a {
  /* TODO: do an audit of everywhere that needs transition time */
  color: var(--ifm-font-color-base);
  font-size: var(--ifm-h4-font-size);
}

.getTheBook {
  margin: 2rem 0 1rem;
}

.icons {
  display: flex;
  gap: 1rem;
  flex-direction: column;
  margin-bottom: 2rem;
  align-items: flex-end;
}

.icon {
  display: block;
  height: 2.5rem;
  width: 2.5rem;
}

.icon path {
  fill: var(--ifm-font-color-base);
  transition: fill var(--ifm-transition-fast);
}

.credits {
  margin: 1rem 0 0;
  text-align: center;
  color: var(--ifm-color-secondary-contrast-foreground);
}

.credits a {
  color: var(--ifm-font-color-base);
  text-decoration: underline;
}

/* Todo: use var(--lt-media-query-width-medium)? */
@media (min-width: 768px) {
  .links {
    flex-direction: row;
  }

  .link {
    flex-direction: row;
  }

  .getTheBook {
    margin-top: 2px;
  }

  .credits {
    margin: 3rem;
  }
}

